file(GLOB SOURCES Source/*.cpp)

add_library(Recast STATIC ${SOURCES})

set(Recast_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Include")

include_directories(${Recast_INCLUDE_DIR})

set_target_properties(Recast PROPERTIES VERSION ${SKYLICHT_VERSION})

if (INSTALL_LIBS)
install(TARGETS Recast
			EXPORT RecastTargets
			RUNTIME DESTINATION ${SKYLICHT_RUNTIME_INSTALL_DIR}
			LIBRARY DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
			ARCHIVE DESTINATION ${SKYLICHT_ARCHIVE_INSTALL_DIR})
			
install (DIRECTORY ${SKYLICHT_ENGINE_PROJECT_DIR}/Recast
	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}
	FILES_MATCHING PATTERN "*.h*")

install(EXPORT RecastTargets
	FILE RecastTargets.cmake
	NAMESPACE Skylicht::
	DESTINATION ${SKYLICHT_TARGET_INSTALL_DIR}
)
endif()